# scanbot

./: .gitignore  .gitmodules  README.md
3d-model/: .gitignore  Assembly1.iam  arm.ipt  arm.stl  base-v2.ipt  base.ipt  coupler.ipt  coupler.stl  cover-new.ipt  cover.ipt  cover.stl  cover2.ipt  front-wheel-new.ipt  front-wheel-new_MIR.ipt  front-wheel.ipt  front-wheel.stl  front-wheel_MIR.ipt  front-wheel_MIR1.ipt  lockfile.lck  motherboard.ipt  rear-wheel.ipt  rear-wheel_MIR.ipt  rear-wheel_MIR1.ipt  rod.ipt  rod_CPY1.ipt  rod_CPY1_MIR.ipt  rod_CPY2.ipt  rod_CPY2_MIR.ipt  rod_CPY3.ipt  rod_CPY3_MIR.ipt  rod_MIR.ipt  small-gear-v2.ipt  small-gear-v2_CPY.ipt  small-gear-v2_CPY_MIR.ipt  small-gear-v2_MIR.ipt  small-gear-v2_MIR_CPY.ipt  small-gear.ipt  small-gear_MIR.ipt  tracks_v2.ipt  tracks_v2.stl  (+11 more)
3d-model/1306 OLED 128x64 I2C 0.96 inch/: OSSD-128x64.ipt
3d-model/18650 battery/: 18650.ipt
3d-model/stl/: base-v2.stl  (+3 more)
3d-rooms/: apartment.FCStd  apartment.dae  apartment.stl
controller/: Makefile  controller  main.c
doc/: info.txt
docker/: docker-compose.yml  start.sh
docker/ros/catkin_ws/src/scanbot_hwiface/: CMakeLists.txt  README.md  notes  package.xml
docker/ros/catkin_ws/src/scanbot_hwiface/src/: scanbot_hwiface.cpp  serial.c.h
firmware/: README.md  measurements.txt  platformio.ini  update-cscope.sh  upload.sh
res/: hc05 configs.txt  lidar-comparison.xlsx  notes.txt
src-firmware/: platformio.ini
src-pc/: README.md  bag1.bag  btconnect.py  bttest.py  main.py  pole_plots.py  robot.py  tempCodeRunnerFile.py  timer_emiter.py  windows-requirements.txt
(+4529 files in other folders)
